<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.MainActivity">

    <LinearLayout
            android:layout_weight="0"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:layout_weight="1"
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/searchButton"
                android:text="@string/search_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
            android:text="@string/sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <RadioGroup
            android:id="@+id/sortByRadioGroup"
            android:orientation="horizontal"
            android:checkedButton="@id/relevanceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
                android:text="@string/relevance_rb_label"
                android:id="@+id/relevanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatRadioButton
                android:text="@string/thumbs_up_rb_label"
                android:id="@+id/thumbsUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatRadioButton
                android:text="@string/thumbs_down_rb_label"
                android:id="@+id/thumbsDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/entriesRecyclerView"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <FrameLayout
            android:id="@+id/loadingScreen"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ProgressBar
                android:layout_gravity="center_horizontal"
                android:paddingTop="64dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </FrameLayout>

</LinearLayout>